# bevy-inspector-egui

./: Cargo.toml
examples/: attributes.rs  demo.rs  entity.rs  enum.rs  hide_window.rs  inspector_query.rs  multiple_inspectors.rs  new_egui_window.rs  planet_demo.rs  quaternion.rs  reflected_ui.rs  resource_inspector.rs  rust_types.rs  setup_code.rs  transform.rs  tuples.rs  two_windows.rs  ui.rs  vec_as_dropdown.rs  world.rs
integrations/bevy-inspector-egui-rapier/: Cargo.toml
integrations/bevy-inspector-egui-rapier/examples/: rapier2d.rs  rapier3d.rs
src/: plugin.rs
src/impls/: bevy_sprite.rs  bevy_ui.rs  texture.rs
src/reflect/: mod.rs
src/widgets/: resource_inspector.rs
src/world_inspector/: impls.rs  inspectable_registry.rs  mod.rs
