[package]
edition = "2021"
name = "bevy-inspector-egui-rapier"
repository = "https://github.com/jakobhellermann/bevy-inspector-egui/"
version = "0.7.0"

categories = ["game-development", "gui", "visualization"]
description = "bevy-inspector-egui integration for rapier"
keywords = ["bevy", "inspector", "rapier", "physics"]
license = "MIT"
readme = "README.md"

[features]
rapier2d = ["bevy_rapier2d"]
rapier3d = ["bevy_rapier3d"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false}
bevy-inspector-egui = {version = "0.13", path = "../..", features = ["nalgebra031"]}
bevy_rapier2d = {git = "https://github.com/mrobakowski/bevy_rapier", optional = true}
bevy_rapier3d = {git = "https://github.com/mrobakowski/bevy_rapier", optional = true}

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["x11", "bevy_winit"]}

[[example]]
name = "rapier2d"
required-features = ["rapier2d"]

[[example]]
name = "rapier3d"
required-features = ["rapier3d"]

[package.metadata.docs.rs]
all-features = true
